Mon Aug 14 16:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/ace_mfc.mpb:
        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb:

          Backout the "Specific" guards.

Mon Aug 14 15:20:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/ace_mfc.mpb:
        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb:

          Specific the macro and don't inherit from mfc for opt.

Mon Aug 14 15:43:12 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Makefile.am: Added Hash_Multi_Map_Manager_Test.

Mon Aug 14 13:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/clean.bor:
          Use .inl as file extension to clean instead of .i

        * bin/MakeProjectCreator/templates/bor.mpd:
          Added empty realclean target

Mon Aug 14 12:52:19 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * ACE-INSTALL.html:

          I added "-type gnuace" to the options where the default project
          type was assumed.  Eventually, MPC will not have a default project
          type.

        * include/makeinclude/macros.GNU:
        * include/makeinclude/rules.common.GNU:
        * include/makeinclude/rules.local.GNU:

          Added a new target to remove only the binaries (executables and
          shared libraries).

Mon Aug 14 11:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/*.h:
          Added /**/ to the include of config-all.h and ACE_export.h, this
          way doxygen doesn't add these files to the include graphs which
          make them much easier to read

Sun Aug 13 23:30:02 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * bin/tao_other_tests.lst:

          Excluded TAO POAManagerFactory and EndpointPolicy tests from
          running in a minimum CORBA configuration.

Sun Aug 13 22:21:55 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * test/Hash_Multi_Map_Manager_Test.cpp